todo last section

--- a/index.html
+++ b/index.html
@@ -96,33 +96,33 @@
                 </div>
                 <div class="row">
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Cокращение сроков, трудоемкости, а следовательно, и себестоимости внедрения новых систем</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Оптимизация расходов на приобретение пользовательских лицензий на прикладные системы</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Простота, удобство и контроль доступа сотрудников к информации из различных систем</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Наличие возможности реального управления «сквозными» (затрагивающими различные системы)
                             бизнес-процессами</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Упорядоченность, а следовательно, и снижение себестоимости сопровождения ИТ-архитектуры
                             предприятия:</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Управляемость развитием инфраструктуры</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Снижение технологических и организационных рисков
                     </div>
                 </div>
@@ -136,38 +136,38 @@
                 </div>
                 <div class="row">
                     <div class="col-sm inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Cокращение сроков, трудоемкости, а следовательно, и себестоимости внедрения новых систем</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Подробное исследование и описание Вашей производственной линии. Построение на основе
                             полученных данных, детализированной карты технологических процессов</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Приведение всех процессов к единому управляющему стандарту</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Создание инженерной инфраструктуры (сети, телекоммуникации, инфраструктурные решения,
                             технические средства информационной безопасности, строительство ЦОД (центр обработки данных)
                         </p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Разработка программных средств автоматизации процессов (подсистемы, модули, компоненты,
                             сервисы, пользовательские и функциональные интерфейсы) с учетом внутренних регламентов
                             заказчика</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Разработка эксплуатационной документации, а также помощь в документировании организационных
                             решений для корректного ввода созданных программных и/или технических средств в промышленную
                             эксплуатацию</p>
                     </div>
                     <div class="col-sm  inverted wrap-100">
-                        <div class="visual-block-3"><img src="../../img/Rectangle5.svg"></div>
+                        <div class="visual-block-3"><img src="img/Rectangle5.svg"></div>
                         <p>Обучение и сертификация сотрудников</p>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                         <p>Отдельная программа (подсистема или модуль) должны обеспечивать автоматизацию наиболее
                             полного набора функций отдельного подразделения</p>
                         <div style="margin-left: auto;" class="visual-block-3 mobile-hidden"><img
-                                src="../../img/sgal.svg"></div>
+                                src="img/sgal.svg"></div>
                     </div>
                     <div class="col-sm flex-hack flex-wrap inverted no-margin">
                         <div class="visual-block-3">2</div>
@@ -258,7 +258,7 @@
                         </div>
                         <p>Высокая производительность системы при выполнении всех функций</p>
                         <div style="margin-left: auto;" class="visual-block-3 mobile-hidden"><img
-                                src="../../img/sgal.svg"></div>
+                                src="img/sgal.svg"></div>
                     </div>
                     <div class="col-sm flex-hack flex-wrap inverted no-margin">
                         <div class="visual-block-3">3</div>
@@ -270,7 +270,7 @@
                         </div>
                         <p>Обеспечение тесной связи (интегрированность) отдельных модулей между собой</p>
                         <div style="margin-left: auto;" class="visual-block-3 mobile-hidden"><img
-                                src="../../img/sgal.svg"></div>
+                                src="img/sgal.svg"></div>
                     </div>
                     <div class="col-sm flex-hack flex-wrap inverted no-margin">
                         <div class="visual-block-3">4</div>
@@ -283,7 +283,7 @@
                         <p>Завершение отдельной программы (модуля, подсистемы), возможность закупки и осноение программ,
                             входящих в программный комплекс, по частям</p>
                         <div style="margin-left: auto;" class="visual-block-3 mobile-hidden"><img
-                                src="../../img/sgal.svg"></div>
+                                src="img/sgal.svg"></div>
                     </div>
                     <div class="col-sm flex-hack flex-wrap inverted no-margin">
                         <div class="visual-block-3">5</div>
@@ -296,7 +296,7 @@
                         <p>Дополнение системы новыми модулями, вписывающимися в общую структуру уже установленной
                             системы управления</p>
                         <div style="margin-left: auto;" class="visual-block-3 mobile-hidden"><img
-                                src="../../img/sgal.svg"></div>
+                                src="img/sgal.svg"></div>
                     </div>
                     <div class="col-sm flex-hack flex-wrap inverted no-margin">
                         <div class="visual-block-3">6</div>
@@ -309,7 +309,7 @@
                         <p>Одинаковое эффективное функционирование при любых объёмах обработываемой информации и вне
                             зависимости от чилса участников процесса</p>
                         <div style="margin-left: auto;" class="visual-block-3 mobile-hidden"><img
-                                src="../../img/sgal.svg"></div>
+                                src="img/sgal.svg"></div>
                     </div>
                     <div class="col-sm flex-hack flex-wrap inverted no-margin">
                         <div class="visual-block-3">7</div>
@@ -321,7 +321,7 @@
                         </div>
                         <p>Модернизация программ в связи с высокими темпами научно-технического прогресса</p>
                         <div style="margin-left: auto;" class="visual-block-3 mobile-hidden"><img
-                                src="../../img/sgal.svg"></div>
+                                src="img/sgal.svg"></div>
                     </div>
                 </div>
             </div>
@@ -392,7 +392,7 @@
                         <div class="visual-block-5">1</div>
                     </div>
                     <div class="timeline-panel">
-                        <div class="text-center"><img src="../../img/ph-little.png"></div>
+                        <div class="text-center"><img src="img/ph-little.png"></div>
                         <div class="timeline-heading">
                             <h3 class="text-center black">Постановка задачи Заказчиком</h3>
                         </div>
@@ -407,7 +407,7 @@
                         <div class="visual-block-5">2</div>
                     </div>
                     <div class="timeline-panel">
-                        <div class="text-center"><img src="../../img/ph-little.png"></div>
+                        <div class="text-center"><img src="img/ph-little.png"></div>
                         <div class="timeline-heading">
                             <h3 class="text-center black">Обследование и анализ предприятия Заказчика</h3>
                         </div>
@@ -423,7 +423,7 @@
                         <div class="visual-block-5">3</div>
                     </div>
                     <div class="timeline-panel">
-                        <div class="text-center"><img src="../../img/ph-little.png"></div>
+                        <div class="text-center"><img src="img/ph-little.png"></div>
                         <div class="timeline-heading">
                             <h3 class="text-center black">Выбор решений. Концепция</h3>
                         </div>
@@ -439,7 +439,7 @@
                         <div class="visual-block-5">4</div>
                     </div>
                     <div class="timeline-panel">
-                        <div class="text-center"><img src="../../img/ph-little.png"></div>
+                        <div class="text-center"><img src="img/ph-little.png"></div>
                         <div class="timeline-heading">
                             <h3 class="text-center black">Реализация решения</h3>
                         </div>
@@ -454,7 +454,7 @@
                         <div class="visual-block-5">5</div>
                     </div>
                     <div class="timeline-panel">
-                        <div class="text-center"><img src="../../img/ph-little.png"></div>
+                        <div class="text-center"><img src="img/ph-little.png"></div>
                         <div class="timeline-heading">
                             <h3 class="text-center black">Сопровождение решения</h3>
                         </div>
