--- a/index.html
+++ b/index.html
@@ -518,6 +518,13 @@
                     не проблема. Готовы интегрировать системы? <span class="italic">Свяжитесь с нами сейчас </span></p>
             </div>
         </div>
+        <div class="container-wrapper">
+            <div class="container w-100">
+                <div class="relative-image">
+                    <img src="img/systemintegration/итоги СИ.svg" alt=""/>
+                </div>
+            </div>
+        </div>
         <div class="container-wrapper flex-center" id="contacts">
             <div class="container w-60">
                 <h2>Свяжитесь с нами</h2>
